--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
  @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
  @import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100;0,200;1,100&display=swap');
 
+
+
+
 h3 {
     /*Le asigna por defecto un tamaño de letra y un grosor a los titulos H3*/
     font-size: 80px;
@@ -84,8 +87,21 @@ nav {
     font-weight: bold;
 }
 
+
+
+.registrarse{
+    /*Da estilos a los botones de login y registrarse*/
+    font-weight: bold;
+    font-size: 13px;
+    margin-right: 15px;
+    background-color: transparent;
+    border: none;
+    color: #724921 !important;
+    padding: 0px;
+}
+
 .cabecera {
-    /*Posiciona los botones de login y registrase en el menu princial al centro y a la derecha y les da color*/
+    /* Es el contenedor que Posiciona los botones de login y registrase en el menu princial al centro y a la derecha y les da color*/
     display: flex;
     align-items: center;
     justify-content: end;
@@ -103,20 +119,9 @@ nav {
     justify-content: start;
 }
 
-.boton-modal {
-    /*Le da estilos a los botones de login y registrase del menu principal, en este tambien les pone fondo transparente*/
-    width: 70px;
-    margin: 2px;
-    height: 30px;
-    font-size: 11px;
-    ;
-    color: #78340f !important;
-    border-style: none;
-    background-color: transparent;
-}
 
 .boton-interno {
-    /*Le asigna color a los botones dentro de las ventanas de login y registrarse*/
+    /*Le asigna color a los botones dentro de la ventana de login*/
     background-color: #c59b2d !important;
     border-color: #c59b2d !important;
 }
@@ -205,7 +210,7 @@ nav {
 /*---------- MAIN ----------*/
 main {
     /*Le asigno un color de fondo a todo el main*/
-    background-color: #f5eef3;
+
 }
 
 .imagen-fija-fondo {
@@ -331,10 +336,9 @@ footer {
     height: 540px;
     display: flex;
     justify-content: center;
-    align-items: center;
-    background-color: white !important;
-    
+    align-items: center;  
 }
+
 .img-logo-nav {
     /*Le da estilos al logo pequeño del menu*/
     width: 70px;
@@ -377,6 +381,62 @@ footer {
     width: 50px;
 }
 
+/*Hoja datos personales*/
+
+.form-register {
+    width: 60%;
+    background: #db9e42;
+    padding: 30px;
+    margin: auto;
+    margin-top: 50px;
+    border-radius: 4px;
+    font-family: 'calibri';
+    color: white;
+    box-shadow: 7px 13px 37px #000;
+  }
+  
+  .form-register h4 {
+    font-size: 22px;
+    margin-bottom: 20px;
+  }
+  
+  .controls {
+    width: 100%;
+    padding: 10px;
+    border-radius: 4px;
+    margin-bottom: 16px;
+    border: 1px solid #1f53c5;
+    font-family: 'calibri';
+    font-size: 18px;
+    color: white;
+  }
+  
+  .form-register p {
+    height: 40px;
+    text-align: center;
+    font-size: 25px;
+    line-height: 40px;
+  }
+  
+  .form-register a {
+    color: white;
+    text-decoration: none;
+  }
+  
+  .form-register a:hover {
+    color: white;
+    text-decoration: underline;
+  }
+  
+  .form-register .botons {
+    width: 100%;
+    background: #1f53c5;
+    border: none;
+    padding: 12px;
+    color: white;
+    margin: 16px 0;
+    font-size: 16px;
+  }
 
 
 
@@ -406,10 +466,16 @@ footer {
         
 }
 
-@media(max-width: 850px) {
+@media(max-width: 880px) {
     .navbar4 {
         /*Le da estilos a la lista del menu, tamaño de letra, centrado y grosor de letra*/
         font-size: 11px !important;
+    }
+
+    .registrarse{
+        /*Da estilos a los botones de login y registrarse*/
+        font-size: 11px;
+       
     }
 }
 
