se creo el archivo tablamisdatos

--- a/proyecto_integrador3/src/main/resources/templates/registrarse.html
+++ b/proyecto_integrador3/src/main/resources/templates/registrarse.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
         <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="../static/css/styles.css">
         <title>Registrase</title>
       </head>
 <body class="body-registrarse">
@@ -28,7 +28,7 @@
           <div class="collapse navbar-collapse navbarlogo" id="navbarTogglerDemo01">
             <a href="./index.html">
               <div class="imagen-logo ajuste-texto-menu">
-                <img src="./imagenes/Nani-removebg-preview.png" class=" img-logo-nav" alt="">
+                <img src="../static/imagenes/Nani-removebg-preview.png" class=" img-logo-nav" alt="">
               </div>
             </a>
           </div>
@@ -47,7 +47,7 @@
 
         <div class="texto-registrarse col-md-6 p-4">
           <div class="logo-registrarse text-center  ">
-            <img class="img-logo-final-home" src="./imagenes/Nani-removebg-preview.png" alt="">
+            <img class="img-logo-final-home" src="../static/imagenes/Nani-removebg-preview.png" alt="">
           </div>
           <form action="action">
               <div class="mb-3 row">
@@ -133,7 +133,7 @@
 
     <footer class="d-flex row p-0 footer-home">
       <div class="contenedor-logo-final-home">
-        <img class="img-logo-final-home" src="./imagenes/Nani-removebg-preview.png" alt="">
+        <img class="img-logo-final-home" src="../static/imagenes/Nani-removebg-preview.png" alt="">
       </div>
     </footer>
     
