--- a/proyecto_integrador3/src/main/resources/templates/index.html
+++ b/proyecto_integrador3/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="../static/css/styles.css">
   <title>Home</title>
 </head>
 
@@ -25,12 +25,12 @@
     <div class=" d-flex justify-content-end">
       <p class="tituloredes">SIGUENOS EN NUESTRAS REDES: &nbsp</p>
       <div class="iconos3">
-        <div class="ms-2"><a href="#"><img class="iconos" src="./imagenes/icons8-instagram-50 black.png" alt=""></a>
+        <div class="ms-2"><a href="#"><img class="iconos" src="../static/imagenes/icons8-instagram-50 black.png" alt=""></a>
         </div>
-        <div class="ms-2"><a href="#"><img class="iconos" src="./imagenes/icons8-tik-tok-50 black.png" alt=""></a></div>
-        <div class="ms-2"><a href="#"><img class="iconos" src="./imagenes/icons8-facebook-50 black.png" alt=""></a>
+        <div class="ms-2"><a href="#"><img class="iconos" src="../static/imagenes/icons8-tik-tok-50 black.png" alt=""></a></div>
+        <div class="ms-2"><a href="#"><img class="iconos" src="../static/imagenes/icons8-facebook-50 black.png" alt=""></a>
         </div>
-        <div class="ms-2"><a href="#"><img class="iconos" src="./imagenes/icons8-youtube-play-50 black.png" alt=""></a>
+        <div class="ms-2"><a href="#"><img class="iconos" src="../static/imagenes/icons8-youtube-play-50 black.png" alt=""></a>
         </div>
       </div>
     </div>
@@ -44,7 +44,7 @@
         <div class="collapse navbar-collapse navbarlogo" id="navbarTogglerDemo01">
           <a href="">
             <div class="imagen-logo alvaro">
-              <img src="imagenes/Nani-removebg-preview.png" class=" img-logo" alt="">
+              <img src="../static/imagenes/Nani-removebg-preview.png" class=" img-logo" alt="">
             </div>
           </a>
           <ul class="navbar-nav navbar4 container-fluid p-0">
@@ -90,7 +90,7 @@
     <div class="contenido-header">
       <div class="header-flex">
         <div class="img-fondo-header">
-          <img class="img-header-banner img-fluid" src="./imagenes/Nani-removebg-preview.png" alt="">
+          <img class="img-header-banner img-fluid" src="../static/imagenes/Nani-removebg-preview.png" alt="">
         </div>
         <div class="titulo1">
           <h1 class=" h1estetica">NANI ESTETICA</h1>
@@ -120,7 +120,7 @@
       <h3 class="text-center">BENEFICIOS DE LOS TRATAMIENTOS FACIALES</h3>
       <div class="tarjetas-centrales">
         <div class="card my-3 text-center tarjeta1 borde border-0" style="width: 40rem;">
-          <img src="./imagenes/istockphoto-968940310-1024x1024.jpg" class="card-img-top" alt="...">
+          <img src="../static/imagenes/istockphoto-968940310-1024x1024.jpg" class="card-img-top" alt="...">
         </div>
         <div class="div-parrafos">
           <p class="text-center parrafos-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed repellendus
@@ -134,7 +134,7 @@
 
       <div class="tarjetas-centrales">
         <div class="card my-3 text-center tarjeta2 borde border-0" style="width: 40rem;">
-          <img src="./imagenes/istockphoto-968940310-1024x1024.jpg" class="card-img-top" alt="...">
+          <img src="../static/imagenes/istockphoto-968940310-1024x1024.jpg" class="card-img-top" alt="...">
         </div>
         <div class="div-parrafos">
           <p class="text-center parrafos-main">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora
@@ -147,7 +147,7 @@
 
       <div class="tarjetas-centrales">
         <div class="card my-3 text-center tarjeta1 borde border-0" style="width: 40rem;">
-          <img src="./imagenes/istockphoto-968940310-1024x1024.jpg" class="card-img-top" alt="...">
+          <img src="../static/imagenes/istockphoto-968940310-1024x1024.jpg" class="card-img-top" alt="...">
         </div>
         <div class="div-parrafos">
           <p class="text-center parrafos-main">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
@@ -161,7 +161,7 @@
 
       <div class="tarjetas-centrales">
         <div class="card my-3 text-center tarjeta2 borde border-0" style="width: 40rem;">
-          <img src="./imagenes/istockphoto-968940310-1024x1024.jpg" class="card-img-top" alt="...">
+          <img src="../static/imagenes/istockphoto-968940310-1024x1024.jpg" class="card-img-top" alt="...">
         </div>
         <div class="div-parrafos">
           <p class="text-center parrafos-main">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum ullam
@@ -261,31 +261,31 @@
     <div class="divfooter col-lg-4">
       <p class="mb-3 text-center titulos-footer">CONTACTOS</p>
       <div class="mb-4">
-        <p class="mb-0 text-center"><img class="iconos" src="./imagenes/icons8-gps-50.png" alt="">Pablo Podesta 451,
+        <p class="mb-0 text-center"><img class="iconos" src="../static/imagenes/icons8-gps-50.png" alt="">Pablo Podesta 451,
           B1625 Belén de Escobar</p>
         <p class="text-center mt-0">Provincia de Buenos Aires</p>
       </div>
       <div class="mb-4 text-center">
-        <p><img class="iconos" src="./imagenes/icons8-teléfono-celular-50.png" alt="">+54 (11)1111-1111</p>
+        <p><img class="iconos" src="../static/imagenes/icons8-teléfono-celular-50.png" alt="">+54 (11)1111-1111</p>
       </div>
       <div class="mb-4 text-center">
-        <p><img class="iconos" src="./imagenes/icons8-whatsapp-50negro.png" alt="">+54 (11)1111-1111</p>
+        <p><img class="iconos" src="../static/imagenes/icons8-whatsapp-50negro.png" alt="">+54 (11)1111-1111</p>
       </div>
       <div class="mb-4 text-center">
-        <p class=""><img class="iconos pe-1" src="./imagenes/icons8-correo-50.png" alt="">estoesunaprueba@gmail.com</p>
+        <p class=""><img class="iconos pe-1" src="../static/imagenes/icons8-correo-50.png" alt="">estoesunaprueba@gmail.com</p>
       </div>
       <div class="text-center iconos3 mt-5 pb-4">
         <div class="">
-          <a class="link" href="#"><img class=" iconos2" src="./imagenes/icons8-instagram-50 black.png" alt=""></a>
+          <a class="link" href="#"><img class=" iconos2" src="../static/imagenes/icons8-instagram-50 black.png" alt=""></a>
         </div>
         <div>
-          <a class="link" href="#"><img class=" iconos2" src="./imagenes/icons8-tik-tok-50 black.png" alt=""></a>
+          <a class="link" href="#"><img class=" iconos2" src="../static/imagenes/icons8-tik-tok-50 black.png" alt=""></a>
         </div>
         <div>
-          <a class="link" href="#"> <img class=" iconos2" src="./imagenes/icons8-facebook-50 black.png" alt=""></a>
+          <a class="link" href="#"> <img class=" iconos2" src="../static/imagenes/icons8-facebook-50 black.png" alt=""></a>
         </div>
         <div>
-          <a class="link" href="#"><img class=" iconos2" src="./imagenes/icons8-youtube-play-50 black.png" alt=""></a>
+          <a class="link" href="#"><img class=" iconos2" src="../static/imagenes/icons8-youtube-play-50 black.png" alt=""></a>
         </div>
       </div>
     </div>
@@ -320,7 +320,7 @@
     </div>
 
     <div class="contenedor-logo-final">
-      <img class="img-logo-final" src="./imagenes/Nani-removebg-preview.png" alt="">
+      <img class="img-logo-final" src="../static/imagenes/Nani-removebg-preview.png" alt="">
     </div>
 
     <div class="diseñado">
