--- a/proyecto_integrador3/src/main/resources/templates/misturnos.html
+++ b/proyecto_integrador3/src/main/resources/templates/misturnos.html
@@ -7,7 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-        <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="../static/css/styles.css">
         <title>Mis turnos</title>
       </head>
 <body>
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse navbarlogo" id="navbarTogglerDemo01">
         <a href="./home.html">
           <div class="imagen-logo ajuste-texto-menu">
-            <img src="./imagenes/Nani-removebg-preview.png" class=" img-logo-nav" alt="">
+            <img src="../static/imagenes/Nani-removebg-preview.png" class=" img-logo-nav" alt="">
           </div>
         </a>
         <ul class="navbar-nav navbar4 container-fluid p-0">
@@ -53,7 +53,7 @@
   </main>
   <footer class="d-flex row p-0 footer-home">
     <div class="contenedor-logo-final-home">
-      <img class="img-logo-final-home" src="./imagenes/Nani-removebg-preview.png" alt="">
+      <img class="img-logo-final-home" src="../static/imagenes/Nani-removebg-preview.png" alt="">
     </div>
   </footer>
 
