--- a/proyecto_integrador3/src/main/resources/templates/home.html
+++ b/proyecto_integrador3/src/main/resources/templates/home.html
@@ -9,10 +9,10 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <link rel="stylesheet" href="../static/css/styles.css">
-  <title>Inicio-Sesion</title>
+  <title>Home</title>
 </head>
 
-<body class="m-0 p-0">
+<body class="body-home">
 
   <!--Boton flotante de ws-->
   <a href="#" target="_blank" class="boton-flotante">
