--- a/proyecto_integrador3/src/main/resources/templates/registrarse.html
+++ b/proyecto_integrador3/src/main/resources/templates/registrarse.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="../static/css/styles.css">
         <title>Registrase</title>
       </head>
-<body class="body-registrarse">
+<body class="body-login">
 
     <a href="#" target="_blank" class="boton-flotante">
         <i class="fa-brands fa-whatsapp"></i>
@@ -39,7 +39,7 @@
       </div>
     </div>
 
-    <main>
+    <main class="main-registrarse-2">
       <div class="d-flex justify-content-center  align-items-center div-registrarse">
     <section class=" section-registrarse">
       <div class="row  ">
@@ -52,17 +52,17 @@
           <form action="action">
               <div class="mb-3 row">
                 <div class="col-md-6">
-                <label for="nombre" class="form-label">Nombre</label>
+                <label for="nombre" class="form-label texto-label">Nombre</label>
                 <input type="text" class="form-control" id="nombre" placeholder="Nombre">
               </div>
               <div class="col-md-6">
-                <label for="apellido" class="form-label">Apellido</label>
+                <label for="apellido" class="form-label texto-label">Apellido</label>
                 <input type="text" class="form-control" id="apellido" placeholder="Apellido">
               </div>
             </div>
             <div class="mb-3 row">
               <div class="col-md-6">
-              <label for="tipo-dni" class="form-label">Tipo documento</label>
+              <label for="tipo-dni" class="form-label texto-label">Tipo documento</label>
               <select id="tipo-dni" class="form-select" aria-label="Default select example">
                 <option selected>Seleccione</option>
                 <option value="1">DNI</option>
@@ -71,13 +71,13 @@
               </select>
             </div>
             <div class="col-md-6">
-              <label for="numero-doc" class="form-label">N° Documento</label>
+              <label for="numero-doc" class="form-label texto-label">N° Documento</label>
               <input type="text" class="form-control" id="numero-doc" placeholder="N° de documento">
             </div>
           </div>
           <div class="mb-3 row">
             <div class="col-md-6">
-            <label for="sexo" class="form-label">Sexo</label>
+            <label for="sexo" class="form-label texto-label">Sexo</label>
             <select id="sexo" class="form-select" aria-label="Default select example">
               <option selected>Seleccione</option>
               <option value="1">Femenino</option>
@@ -86,27 +86,27 @@
             </select>
           </div>
           <div class="col-md-6">
-            <label for="edad" class="form-label">Edad</label>
+            <label for="edad" class="form-label texto-label">Edad</label>
             <input type="number" class="form-control" id="edad" placeholder="Edad">
           </div>
         </div>
         <div class="mb-3 row">
           <div class="col-md-6">
-          <label for="telefono" class="form-label">Telefono</label>
+          <label for="telefono" class="form-label texto-label">Telefono</label>
           <input type="number" class="form-control" id="telefono" placeholder="Telefono">
         </div>
         <div class="col-md-6">
-          <label for="email" class="form-label">Email</label>
+          <label for="email" class="form-label texto-label">Email</label>
           <input type="email" class="form-control" id="email" placeholder="Email">
         </div>
       </div>
       <div class="mb-3 row">
         <div class="col-md-6">
-        <label for="direccion" class="form-label">Direccion</label>
+        <label for="direccion" class="form-label texto-label">Direccion</label>
         <input type="text" class="form-control" id="direccion" placeholder="Direccion">
       </div>
       <div class="col-md-6">
-        <label for="nacimiento" class="form-label">Fecha de nacimiento</label>
+        <label for="nacimiento" class="form-label texto-label">Fecha de nacimiento</label>
         <input type="date" class="form-control" id="nacimiento" placeholder="Fecha de nacimiento">
       </div>
     </div>
@@ -121,15 +121,15 @@
 <div class="text-center fs-5  mt-2 ">
   <a class="m-2 " href="">¿Olvido su contraseña?</a>
 </div>
+</div>
+</div>
+</section>
+</div>   
+</main>
   
  
-        </div>
-      </div>
-    </section>
         
-  </div>   
 
-    </main>
 
     <footer class="d-flex row p-0 footer-home">
       <div class="contenedor-logo-final-home">
